Fix FootPrint layout stretching

--- a/Angular/mat/src/app/components/footprint/footprint.component.css
+++ b/Angular/mat/src/app/components/footprint/footprint.component.css
@@ -1,12 +1,13 @@
-canvas {
- 
-  background-color: green;
-  width: 100px;
-  height: 100px
+:host {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  min-height: 0;
 }
 
-:host {
+canvas {
+  flex: 1 1 auto;
   display: block;
   width: 100%;
-  height: 90%;
+  height: 100%;
 }
